<resources>
    <string name="app_name">Aisle Test Application</string>

    <string name="enter_your_phone_number">Enter Your\nPhone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="continue_txt">Continue</string>
    <string name="_91">+91</string>
    <string name="enter_the_otp">Enter The\nOTP</string>
    <string name="notes">Notes</string>
    <string name="personal_messages_to_you">Personal messages to you</string>
    <string name="upgrade">Upgrade</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="premium_members_can_view_all_their_at_once">Premium members can\nview all their at once</string>
    <string name="tap_to_review_50_notes">Tap to review 50+ notes</string>
</resources>