<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="dataAvailable"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{dataAvailable ? View.VISIBLE : View.GONE}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/gilroy_extra_bold"
                    android:text="@string/notes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/personal_messages_to_you"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardProfile"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    app:cardCornerRadius="@dimen/_16sdp"
                    app:layout_constraintDimensionRatio="1:0.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            tools:ignore="ContentDescription"
                            tools:src="@color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            android:fontFamily="@font/gilroy"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20ssp"
                            app:layout_constraintBottom_toTopOf="@id/tv_desc"
                            tools:text="Meena, 23" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/gilroy_medium"
                            android:text="@string/tap_to_review_50_notes"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            app:layout_constraintBottom_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textInterested"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:fontFamily="@font/gilroy_extra_bold"
                    android:text="@string/interested_in_you"
                    android:textColor="@color/black"
                    app:autoSizeMaxTextSize="@dimen/_20ssp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toStartOf="@id/btnUpgrade"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardProfile" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textInterestedDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/premium_members_can_view_all_their_at_once"
                    android:textColor="@color/darker_gray"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="@id/textInterested"
                    app:layout_constraintEnd_toStartOf="@id/btnUpgrade"
                    app:layout_constraintStart_toStartOf="@id/textInterested"
                    app:layout_constraintTop_toBottomOf="@id/textInterested" />

                <Button
                    android:id="@+id/btnUpgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/rounded_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/gilroy"
                    android:foreground="@drawable/ripple_effect"
                    android:minWidth="@dimen/_100sdp"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/upgrade"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:backgroundTint="#EFCC2D"
                    app:layout_constraintBottom_toBottomOf="@id/textInterestedDesc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardProfile"
                    tools:ignore="UnusedAttribute" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/textInterestedDesc"
                    app:spanCount="2"
                    tools:listitem="@layout/layout_item_note" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{dataAvailable ? View.GONE : View.VISIBLE}"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout_item_shimmer" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>